tests/cases/error/error-undefined-include-var.rapt
# line 1
INCLUDE dummy.rapt foo=bar
# line 3